[Refactor] 카테고리 계층별 조회 구현 (#203)
* refactor #202: 카테고리 단계별 조회 구현

* refactor #202: 카테고리 BaseEntity 상속

* refactor #202: 주석 제거 및 Request 검증 추가

* refactor #202: 카테고리 조회 응답 구조 단순화

* refactor #202: Spotless 적용